@@ -20,6 +20,7 @@
   - Local configuration =yet-mail-personal-alias-file=.
   - Enable =Gnus= as RSS / Atom reader via 'gwene.org'.
   - Enable ~shell~ evaluation in =org-mode= buffers.
+  - Package =imenu-list=. Toggle =imenu-list-minor-mode= with =C-c i s=.
 
 *** Changed:
   - Keybinding =C-c l s= now calls ~M-x eglot~.
